fixing footer spacing and header transparancy issue

--- a/site-templates/styles/components/header.css
+++ b/site-templates/styles/components/header.css
@@ -2,6 +2,7 @@
   border-bottom: solid 1px var(--terciary-color);
   padding: 0 15px;
   background-color: white;
+  z-index: 10;
 }
 
 .c-header__brand {
